MySQL adaptation and first migration

--- a/SalesWebMvc/appsettings.json
+++ b/SalesWebMvc/appsettings.json
@@ -6,6 +6,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SalesWebMvcContext": "Server=(localdb)\\mssqllocaldb;Database=SalesWebMvcContext-4c271277-ad64-4d29-a82b-620cf435c1db;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "SalesWebMvcContext": "server=localhost;userid=developer;password=25122000;database=saleswebmvcappdb"
   }
+  //Server=(localdb)\\mssqllocaldb;Database=SalesWebMvcContext-4c271277-ad64-4d29-a82b-620cf435c1db;Trusted_Connection=True;MultipleActiveResultSets=true
+  
 }
